--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="israe">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<title>Howdy FED2526</title>
@@ -13,7 +13,332 @@
 </head>
 
 <body>
-	<h1>Howdy FED2526</h1>
+
+
+<header>
+
+	<section>
+		<p>Gratis retourneren en omruilen</p>
+	  </section>
+
+<nav>
+<ul>
+	  <li><button>☰</button></li>   <!-- hamburger -->
+      <li><a href="/wishlist">♡</a></li> <!-- wishlist -->
+
+      <li>
+        <a href=".">
+          <img src="images/adidas-logo.pn" alt="adidas logo"> 
+        </a>
+      </li> <!-- logo (mist bij png de g) -->
+
+      <li><a href="/account">👤</a></li> <!-- account -->
+      <li><a href="/zoeken">🔍</a></li> <!-- zoeken -->
+      <li><a href="/winkelwagen">🛒</a></li>   <!-- winkelwagen -->
+	</li>
+</ul>
+</nav>
+</header>
+
+<main>
+
+	<!-- eerste section onder nav-->
+<section>
+	<img src="images/eerste-foto-homepagina.jpeg" alt="home pagina foto">
+
+	<h1>Back in the game</h1>
+	<p>Veld,baan,gym of track. Maak een comback in sportieve looks die je de hele dag energie geven</p>
+
+	<a href="https://www.adidas.nl/heren-superstar">Shop Heren</a>
+	<a href="https://www.adidas.nl/dames-superstar"> Shop Dames</a>
+	<a href="https://www.adidas.nl/kinderen-sneakers"> Shop Kids</a>
+</section>
+
+
+<!-- tweede section categorie kiezen-->
+<section>
+
+<h2>Gear up. Head outdoors.</h2>
+
+<ul>
+	<li>
+		<a href="https://www.adidas.nl/search?q=hiking">
+			<img src="images/hiking.jpg" alt="hiking foto">
+			<p>Hiking</p>
+		</a>
+	</li>
+
+	<li>
+		<a href="https://www.adidas.nl/search?q=trail+running">
+			<img src="images/trailrunning.jpg" alt="Trailrunning foto">
+			<p>Trailrunning</p>
+		</a>
+	</li>
+
+	<li>
+		<a href="https://www.adidas.nl/search?q=kleding">
+			<img src="images/kleding.jpg" alt="Kleding foto">
+			<p>Kleding</p>
+		</a>
+	</li>
+
+	<li>
+		<a href="https://www.adidas.nl/search?q=accessoires">
+			<img src="images/accessoires.jpg" alt="accessiores foto">
+			<p>accessoires</p>
+		</a>
+	</li>
+
+
+</ul>
+</section>
+
+<!-- derde section foto met buttons heren/dames -->
+<section>
+	<img src="images/megarida.jpg" alt="megarida foto">
+
+
+  <h2>Megaride</h2>
+  <p>Vis-tach energie.</p>
+
+  <a href="https://www.adidas.nl/heren-superstar">Shop heren →</a>
+  <a href="https://www.adidas.nl/dames-superstar">Shop dames →</a>
+
+</section>
+
+
+
+
+<!-- vierde section 2e keer categorie kiezen -->
+<section>
+	<h2>Ontdek nieuwe items</h2>
+  
+	<ul>
+	  <li>
+		<a href="https://www.adidas.nl/search?q=motorsport">
+		  <img src="images/motorsport.jpg" alt="motorsport foto">
+		  <p>Motorsport</p>
+		</a>
+	  </li>
+  
+	  <li>
+		<a href="https://www.adidas.nl/padel_tennis">
+		  <img src="images/padel.jpg" alt="padel foto">
+		  <p>Padel</p>
+		</a>
+	  </li>
+  
+	  <li>
+		<a href="https://www.adidas.nl/search?q=Golf">
+		  <img src="images/golf.jpg" alt="golf foto">
+		  <p>Golf</p>
+		</a>
+	  </li>
+  
+	  <li>
+		<a href="https://www.adidas.nl/search?q=skateboarding">
+		  <img src="images/skateboarding.jpg" alt="skateboarden foto">
+		  <p>Skateboarding</p>
+		</a>
+	  </li>
+	</ul>
+  </section>
+  
+<section>
+
+<!-- vijfde section 1e productenlijst -->	  
+</section>
+
+<nav>
+    <button>Exclusief voor leden</button>
+    <button>Nieuwe producten</button>
+    <button>Binnenkort verkrijgbaar</button>
+  </nav>
+
+<ul>
+  <li>
+    <a href="#">
+		<img src="images/product1.jpg" alt="Product 1">
+	</a>
+    <button>♡</button>
+  </li>
+
+  <li>
+    <a href="#">
+		<img src="images/product1.jpg" alt="Product 1">
+	</a>
+    <button>♡</button>
+  </li>
+
+  <li>
+    <a href="#">
+		<img src="images/product1.jpg" alt="Product 1">
+	</a>
+    <button>♡</button>
+  </li>
+
+  <li>
+    <a href="#">
+		<img src="images/product1.jpg" alt="Product 1">
+	</a>
+    <button>♡</button>
+  </li>
+
+  <li>
+    <a href="#">
+		<img src="images/product1.jpg" alt="Product 1">
+	</a>
+    <button>♡</button>
+  </li>
+
+  <li>
+    <a href="#">
+		<img src="images/product1.jpg" alt="Product 1">
+	</a>
+    <button>♡</button>
+  </li>
+</ul>
+
+<!-- tweede productenlijst die verborgen wordt met css -->	 
+<ul class="product-list">
+	<li>
+	  <a href="#">
+		<img src="#" alt="">
+	  </a>
+	  <button>♡</button>
+	</li>
+	<li>
+	  <a href="#">
+		<img src="#" alt="">
+	  </a>
+	  <button>♡</button>
+	</li>
+	<li>
+	  <a href="#">
+		<img src="#" alt="">
+	  </a>
+	  <button>♡</button>
+	</li>
+	<li>
+	  <a href="#">
+		<img src="#" alt="">
+	  </a>
+	  <button>♡</button>
+	</li>
+	<li>
+	  <a href="#">
+		<img src="#" alt="">
+	  </a>
+	  <button>♡</button>
+	</li>
+	<li>
+	  <a href="#">
+		<img src="#" alt="">
+	  </a>
+	  <button>♡</button>
+	</li>
+  </ul>
+  
+
+<!-- scrolbar bekendheden -->	 
+
+<!-- sadidas apps -->	 
+
+<!-- dropdowns -->	 
+
+
+<!-- artikel -->	
+<article>
+
+<h2>ADIDAS SPORTWINKEL VOOR PERFORMANCE, STIJL & INNOVATIE - SINDS 1949</h2>
+
+<p>Sport houdt ons fit. Houdt ons alert. Brengt ons samen. Sport heeft de kracht om levens te veranderen - via verhalen van inspirerende sporters en innovatieve technologieën, en door je te helpen op te staan en te bewegen.
+	Vind high-performance activewear en sportkleding gemaakt met de nieuwste technologieën om je te helpen je grenzen te verleggen. Of je nu een hardloper bent, een basketbalspeler, een voetballer of iemand die gewoon graag actief blijft, onze sportwinkel is de ultieme thuisbasis voor al jouw sportkleding. We zijn hier om je te helpen harder te trainen, sneller te lopen en vooruitgang te boeken met producten die je bij kunnen benen en je doelen ondersteunen.
+	Ontdek onze online winkel voor de nieuwste adidas-collecties met de perfecte mix van innovatie en stijl. De sportwinkel van adidas biedt performance sportuitrustingen voor alle niveaus - of je nu een topsporter bent, een fitnessfan, of net begonnen bent met trainen. Onze online winkel garandeert dat je overal toegang hebt tot de nieuwste gear.
+	De adidas sportwinkel is meer dan alleen een plek om sportuitrustingen te shoppen: het is een plek voor creators om hun skills naar een hoger niveau te tillen en nieuwe mogelijkheden te creëren. Elk item in onze sportwinkel is ontworpen met performance en duurzaamheid in het achterhoofd, zodat je zelfverzekerd kunt bewegen. Bij adidas bundelen we de krachten met de besten in de industrie om samen te creëren, en zorgen we ervoor dat elk kledingstuk beweging, zelfexpressie en een actieve lifestyle ondersteunt. Waar de sport je ook brengt, onze online winkel heeft alles voor je in huis om je klaar te stomen voor succes.
+</p>
+
+<img src="#" alt="logo adidas">
+
+</article> 
+
+<!-- footer -->
+ 
+
+</main>
+
+
+
+
+
+<section aria-labelledby="leden">
+	<h2 id="leden">Aanbod</h2>
+  
+	<!-- “tab”-knoppen -->
+	<nav aria-label="Filter">
+	  <button aria-pressed="true">Exclusief voor leden</button>
+	  <button>Nieuwe producten</button>
+	</nav>
+  
+	<!-- productgrid 2×3 -->
+	<ul>
+	  <li>
+		<article>
+		  <a href="#">
+			<img src="#" alt="">
+			<p>Label</p>
+		  </a>
+		  <button aria-label="Zet op je verlanglijstje">♡</button>
+		</article>
+	  </li>
+	  <li>
+		<article>
+		  <a href="#"><img src="#" alt=""><p>Label</p></a>
+		  <button aria-label="Zet op je verlanglijstje">♡</button>
+		</article>
+	  </li>
+	  <li>
+		<article>
+		  <a href="#"><img src="#" alt=""><p>Label</p></a>
+		  <button aria-label="Zet op je verlanglijstje">♡</button>
+		</article>
+	  </li>
+	  <li>
+		<article>
+		  <a href="#"><img src="#" alt=""><p>Label</p></a>
+		  <button aria-label="Zet op je verlanglijstje">♡</button>
+		</article>
+	  </li>
+	  <li>
+		<article>
+		  <a href="#"><img src="#" alt=""><p>Label</p></a>
+		  <button aria-label="Zet op je verlanglijstje">♡</button>
+		</article>
+	  </li>
+	  <li>
+		<article>
+		  <a href="#"><img src="#" alt=""><p>Label</p></a>
+		  <button aria-label="Zet op je verlanglijstje">♡</button>
+		</article>
+	  </li>
+	</ul>
+  
+	<!-- onderaan link -->
+	<a href="#">Alles bekijken</a>
+  </section>
+  
+
+
+
+
+
+
+
+
+
+
+
+
 
 	<script defer src="scripts/script.js"></script>
 </body>
