--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
       <li>
         <a href=".">
-          <img src="images/adidas-logo.pn" alt="adidas logo"> 
+          <img src="images/adidas-logo.png" alt="adidas logo"> 
         </a>
-      </li> <!-- logo (mist bij png de g) -->
+      </li> <!-- logo -->
 
       <li><a href="/account">👤</a></li> <!-- account -->
       <li><a href="/zoeken">🔍</a></li> <!-- zoeken -->
@@ -147,60 +147,63 @@
 <section>
 
 <!-- vijfde section 1e productenlijst -->	  
-</section>
 
 <nav>
     <button>Exclusief voor leden</button>
     <button>Nieuwe producten</button>
     <button>Binnenkort verkrijgbaar</button>
-  </nav>
+</nav>
+
 
 <ul>
   <li>
-    <a href="#">
-		<img src="images/product1.jpg" alt="Product 1">
+    <a href="https://www.adidas.nl/handball-spezial-made-in-germany-schoenen/JR9535.html?pr=taxonomy_rr&slot=1&rec=mt">
+		<img src="images/rode-schoen.jpg" alt="rode adidas schoen">
 	</a>
     <button>♡</button>
   </li>
 
   <li>
-    <a href="#">
-		<img src="images/product1.jpg" alt="Product 1">
+    <a href="https://www.adidas.nl/japan-lo-brain-dead-schoenen%0A/JQ9214.html?pr=taxonomy_rr&slot=2&rec=mt">
+		<img src="images/blauwzwart-schoen.jpg" alt="blauwe adidas schoen">
 	</a>
     <button>♡</button>
   </li>
 
   <li>
-    <a href="#">
-		<img src="images/product1.jpg" alt="Product 1">
+    <a href="https://www.adidas.nl/sc-powerphase-schoenen%0A/JQ3936.html?pr=taxonomy_rr&slot=3&rec=mt">
+		<img src="images/beige-schoen.jpg" alt="beige adidas schoen">
 	</a>
     <button>♡</button>
   </li>
 
   <li>
-    <a href="#">
-		<img src="images/product1.jpg" alt="Product 1">
+    <a href="https://www.adidas.nl/pw-adizero-evo-sl%0A/KI3393.html?pr=taxonomy_rr&slot=4&rec=mt">
+		<img src="images/witte-schoen.jpg" alt="witte adidas schoen">
 	</a>
     <button>♡</button>
   </li>
 
   <li>
-    <a href="#">
-		<img src="images/product1.jpg" alt="Product 1">
+    <a href="https://www.adidas.nl/italia-60s-made-in-italy/JR8378.html?pr=taxonomy_rr&slot=5&rec=mt">
+		<img src="images/bruine-schoen.jpg" alt="bruine adidas schoen">
 	</a>
     <button>♡</button>
   </li>
 
   <li>
-    <a href="#">
-		<img src="images/product1.jpg" alt="Product 1">
+    <a href="https://www.adidas.nl/pw-adizero-evo-sl-%0A/KI3392.html?pr=taxonomy_rr&slot=6&rec=mt">
+		<img src="images/zwarte-schoen.jpg" alt="zwarte adidas schoen">
 	</a>
     <button>♡</button>
   </li>
 </ul>
 
+<!-- alles bekijken knop -->
+<a href="#">Alles bekijken</a>
+ 
 <!-- tweede productenlijst die verborgen wordt met css -->	 
-<ul class="product-list">
+<ul hidden>
 	<li>
 	  <a href="#">
 		<img src="#" alt="">
@@ -238,15 +241,132 @@
 	  <button>♡</button>
 	</li>
   </ul>
-  
+
+</section>
+
 
 <!-- scrolbar bekendheden -->	 
+<section>
+<ul>
+<li>
+	<a href="https://www.adidas.nl/jude_bellingham">
+	<img src="images/bellingham-adidas.jpg" alt="jude bellingham">
+	<h3>Superstar</h3>
+	<p>Omdat iconen het origineel dragen.</p>
+	<span>Shop nu</span>
+	</a>
+</li>
 
-<!-- sadidas apps -->	 
+<li>
+    <a href="https://www.adidas.nl/juventus">
+	  <img src="images/juventus.jpg" alt="juventus">
+      <h3>Juventus 25/26 Derde Tenue</h3>
+      <p>Een ode aan de Bianconeri</p>
+      <span>Shop nu</span>
+    </a>
+  </li>
+
+  <li>
+    <a href="https://www.adidas.nl/wales_bonner">
+	  <img src="images/basketbal-wales-banner.jpg" alt="wales-banner">
+      <h3>adidas Originals by Wales Bonner</h3>
+      <p>Vernieuwde 70s-stijlen.</p>
+      <span>Shop nu</span>
+    </a>
+  </li>
+
+  <li>
+    <a href="https://www.adidas.nl/adidas_capsule-hardlopen">
+	  <img src="images/running-runners.jpg" alt="hardlopende mensen">
+      <h3>adidas Runners-collectie</h3>
+      <p>Beweegt met je mee, van run tot herstel.</p>
+      <span>Shop nu</span>
+    </a>
+</li>
+
+  <li>
+    <a href="https://www.adidas.nl/zomer">
+      <img src="images/urban-sport.jpg" alt="urban kleding">
+      <h3>Big style game</h3>
+      <p>Fashion gemaakt voor optimale bewegingen.</p>
+      <span>Shop nu</span>
+    </a>
+  </li>
+
+  <li>
+    <a href="https://www.adidas.nl/collection-golf">
+	  <img src="images/adidas-oranje-trui.jpg" alt="oranje adidas trui">
+      <h3>Originals Golf</h3>
+      <p>Tijdloze Originals, vernieuwd voor op de golfbaan</p>
+      <span>Shop nu</span>
+    </a>
+  </li>
+
+</ul>
+</section>
+
+<!-- adidas apps -->	 
+<sectio>
+<h2>DOWNLOAD ONZE APPS</h2>
+
+<ul>
+
+<li>	
+<a href="https://go.adidas.com/ihha/u7nv27ek">
+	<img src="images/adidas-zwart.png" alt="adidas app">
+	<p>adidas app</p>
+</a>
+</li>
+
+<li>	
+<a href="https://confirmed.onelink.me/mzYA/486li23w">
+	<img src="images/adidas-blauw.png" alt="adidas app">
+	<p>confirmed</p>
+</a>
+</li>
+
+<li>	
+	<a href="https://www.runtastic.com/apps/runtastic/activity?utm_campaign=AppCollection_MembershipTest&utm_content=membershipTest&utm_medium=dotcom&utm_source=adidas_dotcom&utm_term=August2024">
+		<img src="images/adidas-wit.jpg" alt="adidas app">
+		<p>running</p>
+		<ul></ul>
+	</a>
+</li>
+
+</ul>
+
+</section>
 
 <!-- dropdowns -->	 
 
+<section>
+  
+	<details>
+	  <summary>LET'S MOVE</summary>
+	  <ul>
+		<li><a href="https://www.adidas.nl/hardlopen-schoenen">Hardloopschoenen</a></li>
+		<li><a href="https://www.adidas.nl/fitness_en_training-schoenen">Fitness en Training Schoenen</a></li>
+	  </ul>
+	</details>
+  
+	<details>
+	  <summary>STRAATICONEN</summary>
+	  <ul>
+		<li><a href="https://www.adidas.nl/gazelle">Gazelle</a></li>
+		<li><a href="https://www.adidas.nl/samba?cm_mmc=AdieSEM_Google-_-adidas-Product_Ranges-B-Exact-ROI-PSTRB-_-Franchise+-+Samba-_-samba+adidas&cm_mmca1=NL&cm_mmca2=e&ds_kid=297370459085&af_reengagement_window=30d&is_retargeting=true&pid=googleadwords_temp&c=adidas-Product_Ranges-B-Exact-ROI-PSTRB&af_channel=Search&gclsrc=aw.ds&gad_source=1&gad_campaignid=1010469781&gbraid=0AAAAADwBzxqN9JTw-H3H2K7bPHBGw-w68&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJYo7ltM_V5ADKME_M217CgJLMNKbNHGdT4O8kKstjYOxZua9qGVBFwaAo1zEALw_wcB">Samba</a></li>
+	  </ul>
+	</details>
+  
+	<details>
+	  <summary>ALLEDAAGSE BENODIGDHEDEN</summary>
+	  <ul>
+		<li><a href="https://www.adidas.nl/originals?cm_mmc=AdieSEM_Google-_-adidas-Product_Ranges-B-Exact-ROI-PSTRB-_-Franchise+-+Originals-_-originals+adidas&cm_mmca1=NL&cm_mmca2=e&ds_kid=296052243559&af_reengagement_window=30d&is_retargeting=true&pid=googleadwords_temp&c=adidas-Product_Ranges-B-Exact-ROI-PSTRB&af_channel=Search&gclsrc=aw.ds&gad_source=1&gad_campaignid=1010469781&gbraid=0AAAAADwBzxqN9JTw-H3H2K7bPHBGw-w68&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJbQavMcOdSXN8lUkED6mHQfPKCVXRS2daGq2MSmct087j5PbcheltMaAo9oEALw_wcB">Orginals Schoenen</a></li>
+		<li><a href="https://www.adidas.nl/shirts-kleding?cm_mmc=AdieSEM_Google-_-adidas-Product_Types-B-Exact-ROI-PSTRB-_-t-shirt-_-t-shirt+adidas&cm_mmca1=NL&cm_mmca2=e&ds_kid=296200125096&af_reengagement_window=30d&is_retargeting=true&pid=googleadwords_temp&c=adidas-Product_Types-B-Exact-ROI-PSTRB&af_channel=Search&gclsrc=aw.ds&gad_source=1&gad_campaignid=1010470468&gbraid=0AAAAADwBzxqu4aWvdWAFLnjV2zGBeHGzj&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJYFdH6FTr-F3WGxEZEtT35eZrGanckqBlreQgD7pV882URElIamrk4aAmwREALw_wcB">T-shirts</a></li>
+	  </ul>
+	</details>
 
+  </section>
+  
 <!-- artikel -->	
 <article>
 
@@ -258,87 +378,69 @@
 	De adidas sportwinkel is meer dan alleen een plek om sportuitrustingen te shoppen: het is een plek voor creators om hun skills naar een hoger niveau te tillen en nieuwe mogelijkheden te creëren. Elk item in onze sportwinkel is ontworpen met performance en duurzaamheid in het achterhoofd, zodat je zelfverzekerd kunt bewegen. Bij adidas bundelen we de krachten met de besten in de industrie om samen te creëren, en zorgen we ervoor dat elk kledingstuk beweging, zelfexpressie en een actieve lifestyle ondersteunt. Waar de sport je ook brengt, onze online winkel heeft alles voor je in huis om je klaar te stomen voor succes.
 </p>
 
-<img src="#" alt="logo adidas">
+<img src="images/adidas-logo.png" alt="logo adidas">
 
 </article> 
-
-<!-- footer -->
- 
 
 </main>
 
 
+<footer>
+
+	<nav>
+		<a href="adidas.nl/account-login">Login</a>
+		<a href="https://www.adidas.nl/cart">Winkelwagen</a>
+	  </nav>
+
+<!-- lid worden-->
+	<section>
+		<h2>Word lid en krijg 10% korting*</h2>
+		<a href="#">Meld je gratis aan →</a>
+	  </section>
+
+	  
+<!-- Navigatiekolommen -->
+<nav>
+<ul>
+  <li><a href="https://www.adidas.nl/help?hcid=DELIVERY">Bezorging</a></li>
+  <li><a href="https://www.adidas.nl/bestelling-volgen">Bestelstatus</a></li>
+  <li><a href="https://www.adidas.nl/help-topics-imprint">Colofon</a></li>
+  <li><a href="https://www.adidas.nl/help">Help</a></li>
+</ul>
+
+<ul>
+  <li><a href="https://www.adidas.nl/help/retour-vergoeding">Retouren & Terugbetalingen</a></li>
+  <li><a href="https://www.adidas.nl/glass/sitemaps/adidas/NL/nl/html-sitemap/index.html">Sitemap</a></li>
+  <li><a href="https://www.adidas.nl/help?hcid=PAYMENT">Betalen</a></li>
+  <li><a href="https://www.adidas.nl/stores">Winkelzoeker</a></li>
+</ul>
+</nav>
+
+<!-- Disclaimers in kleine lettertjes -->
+<section>
+<p>
+Kortingsvouchers kunnen worden gebruikt voor een groot aantal van je favoriete adidas-artikelen;
+er gelden bepaalde uitzonderingen en verkoopbeperkingen. Ga naar
+https://www.adidas.com/om/en/selected_items voor uitgesloten items.
+</p>
+</section>
 
 
+<!-- beleid -->
+<section>
+<button>Cookie-instellingen</button>
+<button>Beheer gegevens</button>
 
-<section aria-labelledby="leden">
-	<h2 id="leden">Aanbod</h2>
-  
-	<!-- “tab”-knoppen -->
-	<nav aria-label="Filter">
-	  <button aria-pressed="true">Exclusief voor leden</button>
-	  <button>Nieuwe producten</button>
-	</nav>
-  
-	<!-- productgrid 2×3 -->
-	<ul>
-	  <li>
-		<article>
-		  <a href="#">
-			<img src="#" alt="">
-			<p>Label</p>
-		  </a>
-		  <button aria-label="Zet op je verlanglijstje">♡</button>
-		</article>
-	  </li>
-	  <li>
-		<article>
-		  <a href="#"><img src="#" alt=""><p>Label</p></a>
-		  <button aria-label="Zet op je verlanglijstje">♡</button>
-		</article>
-	  </li>
-	  <li>
-		<article>
-		  <a href="#"><img src="#" alt=""><p>Label</p></a>
-		  <button aria-label="Zet op je verlanglijstje">♡</button>
-		</article>
-	  </li>
-	  <li>
-		<article>
-		  <a href="#"><img src="#" alt=""><p>Label</p></a>
-		  <button aria-label="Zet op je verlanglijstje">♡</button>
-		</article>
-	  </li>
-	  <li>
-		<article>
-		  <a href="#"><img src="#" alt=""><p>Label</p></a>
-		  <button aria-label="Zet op je verlanglijstje">♡</button>
-		</article>
-	  </li>
-	  <li>
-		<article>
-		  <a href="#"><img src="#" alt=""><p>Label</p></a>
-		  <button aria-label="Zet op je verlanglijstje">♡</button>
-		</article>
-	  </li>
-	</ul>
-  
-	<!-- onderaan link -->
-	<a href="#">Alles bekijken</a>
-  </section>
-  
+<ul>
+  <li><a href="https://www.adidas.nl/privacy_policy#cookies">Cookies</a></li>
+  <li><a href="https://www.adidas.nl/privacy_policy">Privacybeleid</a></li>
+  <li><a href="https://www.adidas.nl/terms_and_conditions">Algemene voorwaarden</a></li>
+  <li><a href="https://www.adidas.nl/help/bedrijfsgegevens/adidas-website-toegankelijkheidsverklaring">Toegankelijkheid</a></li>
+</ul>
 
+</section>
 
-
-
-
-
-
-
-
-
-
-
+</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
